--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.example.wheresmymoney"
         minSdkVersion 24
+        //noinspection OldTargetApi
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
